--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </li>
             <li>
               <a href="#services" class="nav-link scrollto"
-                ><i class="bx bx-server"></i> <span>Services</span></a
+                ><i class="bx bx-server"></i> <span>Wat ik doe</span></a
               >
             </li>
             <li>
@@ -127,12 +127,12 @@
       class="d-flex flex-column justify-content-center align-items-center"
     >
       <div class="hero-container" data-aos="fade-in">
-        <h1>Alex Smith</h1>
+        <h1>Jorrit Willaert</h1>
         <p>
-          I'm
+          Ik ben een
           <span
             class="typed"
-            data-typed-items="Designer, Developer, Freelancer, Photographer"
+            data-typed-items="IT-freelancer, web developer, software engineer, machine learning engineer"
           ></span>
         </p>
       </div>
@@ -144,12 +144,17 @@
       <section id="services" class="services">
         <div class="container">
           <div class="section-title">
-            <h2>Services</h2>
+            <h2>Wat ik doe</h2>
             <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
+              Ik ben een laatstejaarstudent burgerlijk ingenieur
+              computerwetenschappen aan de KU Leuven. Ik hou van het ontwikkelen
+              van software en het oplossen van problemen. Daarnaast ben ik erg
+              vertrouwd met web development, gaande van simpele landing pages
+              tot complexe webapplicaties. Een andere passie van mij is het
+              ontwerpen van machine learning applicaties. Dit was dan ook mijn
+              afstudeerrichting en in deze tak heb ik ook al enkele
+              studentenjobs gedaan. In mijn vrije tijd denk ik graag na over
+              startups, waaruit dan ook al enkele MVP's zijn voortgekomen.
             </p>
           </div>
 
