--- a/index.html
+++ b/index.html
@@ -161,22 +161,11 @@
           <div class="row">
             <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
               <div class="icon"><i class="bi bi-briefcase"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
+              <h4 class="title">Burgerlijk ingenieur computerwetenschappen</h4>
               <p class="description">
-                Voluptatum deleniti atque corrupti quos dolores et quas
-                molestias excepturi sint occaecati cupiditate non provident
-              </p>
-            </div>
-            <div
-              class="col-lg-4 col-md-6 icon-box"
-              data-aos="fade-up"
-              data-aos-delay="100"
-            >
-              <div class="icon"><i class="bi bi-card-checklist"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
-              <p class="description">
-                Minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat tarad limino ata
+                Gedurende mijn opleiding hebben wij enorm veel software moeten
+                ontwikkelen, gaande van chess engines in C++ over webapplicaties
+                in Javascript tot machine learning applicaties in Python.
               </p>
             </div>
             <div
@@ -184,11 +173,13 @@
               data-aos="fade-up"
               data-aos-delay="200"
             >
-              <div class="icon"><i class="bi bi-bar-chart"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
+              <div class="icon"><i class="bi bi-browser-chrome"></i></div>
+              <h4 class="title">Web developer</h4>
               <p class="description">
-                Duis aute irure dolor in reprehenderit in voluptate velit esse
-                cillum dolore eu fugiat nulla pariatur
+                Dit gaat van simpele landing pages tot complexe webapplicaties
+                ontwikkeld in React of Angular. Voor diverse MVP's heb ik
+                backend technologie&euml;n zoals Strapi, Flask & Firebase
+                gebruikt.
               </p>
             </div>
             <div
@@ -196,11 +187,26 @@
               data-aos="fade-up"
               data-aos-delay="300"
             >
-              <div class="icon"><i class="bi bi-binoculars"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
+              <div class="icon"><i class="bi bi-bar-chart"></i></div>
+              <h4 class="title">Machine learning engineer</h4>
               <p class="description">
-                Excepteur sint occaecat cupidatat non proident, sunt in culpa
-                qui officia deserunt mollit anim id est laborum
+                Vanwege mijn afstudeerrichting heb ik veel ervaring met het
+                ontwerpen van machine learning applicaties. Een voorbeeld
+                hiervan is een 'Visual Question Answering' chatbot die ik heb
+                ontwikkeld in PyTorch. Een ander voorbeeld is een 'Image
+                segmentation' model die treinsporen detecteert.
+              </p>
+            </div>
+            <div
+              class="col-lg-4 col-md-6 icon-box"
+              data-aos="fade-up"
+              data-aos-delay="100"
+            >
+              <div class="icon"><i class="bi bi-calendar2-heart"></i></div>
+              <h4 class="title">Freelancer</h4>
+              <p class="description">
+                Je kunt me steeds contacteren voor een freelance opdracht in de
+                software!
               </p>
             </div>
             <div
@@ -209,10 +215,12 @@
               data-aos-delay="400"
             >
               <div class="icon"><i class="bi bi-brightness-high"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
+              <h4 class="title">Gepassioneerd door startups</h4>
               <p class="description">
-                At vero eos et accusamus et iusto odio dignissimos ducimus qui
-                blanditiis praesentium voluptatum deleniti atque
+                In mijn vrije tijd denk ik graag na over mogelijke startup
+                idee&euml;n, wat al geleid heeft tot enkele MVP's die ik heb
+                ontwikkeld. Ik sta dan ook altijd open voor nieuwe idee&euml;n
+                samen te ontwikkelen met een co-founder agreement!
               </p>
             </div>
             <div
@@ -221,10 +229,15 @@
               data-aos-delay="500"
             >
               <div class="icon"><i class="bi bi-calendar4-week"></i></div>
-              <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
+              <h4 class="title">Blogger</h4>
               <p class="description">
-                Et harum quidem rerum facilis est et expedita distinctio. Nam
-                libero tempore, cum soluta nobis est eligendi
+                Als ik een tijdje op een leuk project heb gewerkt, of
+                bijvoorbeeld aan een hackathon heb meegedaan, dan schrijf ik er
+                graag een blogpost over. Deze kunt u
+                <a href="https://medium.com/@jorritwillaert98" target="_blank"
+                  >hier</a
+                >
+                terugvinden.
               </p>
             </div>
           </div>
