--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
               class="github"
               ><i class="bx bxl-github"></i
             ></a>
+            <a href="mailto:jorritwilllaert98@gmail.com" class="mail"
+              ><i class="bi bi-envelope"></i
+            ></a>
           </div>
         </div>
 
@@ -249,13 +252,8 @@
       <section id="about" class="about">
         <div class="container">
           <div class="section-title">
-            <h2>About</h2>
-            <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
-            </p>
+            <h2>Over mij</h2>
+            <p>Always dream big, een quote waar ik vaak aan denk.</p>
           </div>
 
           <div class="row">
@@ -263,50 +261,62 @@
               <img src="assets/img/profile-img.jpg" class="img-fluid" alt="" />
             </div>
             <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-              <h3>UI/UX Designer &amp; Web Developer.</h3>
-              <p class="fst-italic">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              </p>
+              <h3>
+                Web developer, software engineer &amp; Machine Learning
+                enthousiast
+              </h3>
+              <p class="fst-italic"></p>
               <div class="row">
                 <div class="col-lg-6">
                   <ul>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Birthday:</strong> <span>1 May 1995</span>
+                      <strong>Verjaardag:</strong> <span>10 Oktober 1998</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Website:</strong> <span>www.example.com</span>
+                      <strong>Website:</strong>
+                      <span
+                        ><a href="www.jorritwillaert.com"
+                          >www.jorritwillaert.com</a
+                        ></span
+                      >
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Phone:</strong> <span>+123 456 7890</span>
+                      <strong>Locaties:</strong> <span>Leffinge & Leuven</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>City:</strong> <span>New York, USA</span>
+                      <strong>Startup idee&euml;n:</strong>
+                      <span>Graag!</span>
                     </li>
                   </ul>
                 </div>
                 <div class="col-lg-6">
                   <ul>
                     <li>
-                      <i class="bi bi-chevron-right"></i> <strong>Age:</strong>
-                      <span>30</span>
+                      <i class="bi bi-chevron-right"></i>
+                      <strong>Leeftijd:</strong>
+                      <span>24</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Degree:</strong> <span>Master</span>
+                      <strong>Studie:</strong>
+                      <span>Computerwetenschappen</span>
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>PhEmailone:</strong>
-                      <span>email@example.com</span>
+                      <strong>Email:</strong>
+                      <span
+                        ><a href="mailto:jorritwillaert98@gmail.com"
+                          >jorritwillaert98@gmail.com</a
+                        ></span
+                      >
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Freelance:</strong> <span>Available</span>
+                      <strong>Freelance:</strong> <span>Open voor werk</span>
                     </li>
                   </ul>
                 </div>
