--- a/index.html
+++ b/index.html
@@ -316,19 +316,15 @@
                     </li>
                     <li>
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Freelance:</strong> <span>Open voor werk</span>
+                      <strong>Freelancing:</strong> <span>Open voor werk!</span>
                     </li>
                   </ul>
                 </div>
               </div>
               <p>
-                Officiis eligendi itaque labore et dolorum mollitia officiis
-                optio vero. Quisquam sunt adipisci omnis et ut. Nulla
-                accusantium dolor incidunt officia tempore. Et eius omnis.
-                Cupiditate ut dicta maxime officiis quidem quia. Sed et
-                consectetur qui quia repellendus itaque neque. Aliquid amet
-                quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis
-                culpa magni laudantium dolores.
+                Al van jongs af aan ben ik ge&iuml;nteresseerd in software.
+                <br />Twijfel dan ook niet om mij te contacteren voor een
+                freelance opdracht, een websiteontwerp, of een tof startup idee!
               </p>
             </div>
           </div>
@@ -340,12 +336,11 @@
       <section id="facts" class="facts">
         <div class="container">
           <div class="section-title">
-            <h2>Facts</h2>
+            <h2>Wist-je-datjes</h2>
             <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
+              Gedurende mijn studies hebben we op enorm veel softwareprojecten
+              moeten werken. Dit leverde mij naast een hoop software ervaring
+              ook erg veel softskills op.
             </p>
           </div>
 
@@ -358,11 +353,14 @@
                 <i class="bi bi-emoji-smile"></i>
                 <span
                   data-purecounter-start="0"
-                  data-purecounter-end="232"
+                  data-purecounter-end="23"
                   data-purecounter-duration="1"
                   class="purecounter"
                 ></span>
-                <p><strong>Happy Clients</strong> consequuntur quae</p>
+                <p>
+                  <strong>Toffe samenwerkingen</strong> met klanten of
+                  medestudenten
+                </p>
               </div>
             </div>
 
@@ -375,11 +373,14 @@
                 <i class="bi bi-journal-richtext"></i>
                 <span
                   data-purecounter-start="0"
-                  data-purecounter-end="521"
+                  data-purecounter-end="59"
                   data-purecounter-duration="1"
                   class="purecounter"
                 ></span>
-                <p><strong>Projects</strong> adipisci atque cum quia aut</p>
+                <p>
+                  <strong>Software projecten</strong> die mijn ervaring geboost
+                  hebben
+                </p>
               </div>
             </div>
 
@@ -389,14 +390,14 @@
               data-aos-delay="200"
             >
               <div class="count-box">
-                <i class="bi bi-headset"></i>
+                <i class="bi bi-code-slash"></i>
                 <span
                   data-purecounter-start="0"
-                  data-purecounter-end="1453"
+                  data-purecounter-end="4687"
                   data-purecounter-duration="1"
                   class="purecounter"
                 ></span>
-                <p><strong>Hours Of Support</strong> aut commodi quaerat</p>
+                <p><strong>Github bijdragen</strong> over meer dan 5 jaar</p>
               </div>
             </div>
 
@@ -406,14 +407,17 @@
               data-aos-delay="300"
             >
               <div class="count-box">
-                <i class="bi bi-people"></i>
+                <i class="bi bi-filetype-py"></i>
                 <span
                   data-purecounter-start="0"
-                  data-purecounter-end="32"
+                  data-purecounter-end="27"
                   data-purecounter-duration="1"
                   class="purecounter"
                 ></span>
-                <p><strong>Hard Workers</strong> rerum asperiores dolor</p>
+                <p>
+                  <strong>Programmeertalen</strong> gebruikt voor het uitwerken
+                  van projecten
+                </p>
               </div>
             </div>
           </div>
@@ -425,24 +429,27 @@
       <section id="skills" class="skills section-bg">
         <div class="container">
           <div class="section-title">
-            <h2>Skills</h2>
+            <h2>Vaardigheden</h2>
             <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
+              Het spreekt voor zich dat uit alle voorgaande projecten een
+              degelijke kennis heb van veelgebruikte (en exotischere)
+              programmeertalen. Hieronder vind je een klein overzicht van talen
+              en frameworks die ik heb gebruikt.
             </p>
           </div>
 
+          <h4 class="mb-4">Web development</h4>
           <div class="row skills-content">
             <div class="col-lg-6" data-aos="fade-up">
               <div class="progress">
-                <span class="skill">HTML <i class="val">100%</i></span>
+                <span class="skill"
+                  >HTML, CSS & JavaScript <i class="val">85%</i></span
+                >
                 <div class="progress-bar-wrap">
                   <div
                     class="progress-bar"
                     role="progressbar"
-                    aria-valuenow="100"
+                    aria-valuenow="85"
                     aria-valuemin="0"
                     aria-valuemax="100"
                   ></div>
@@ -517,6 +524,8 @@
               </div>
             </div>
           </div>
+          <h4 class="mb-4">Software engineering</h4>
+          <h4 class="mb-4">Machine learning</h4>
         </div>
       </section>
       <!-- End Skills Section -->
