Started working on the portfolio

--- a/index.html
+++ b/index.html
@@ -688,20 +688,21 @@
           <div class="section-title">
             <h2>Portfolio</h2>
             <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
+              Uit de combinatie van de richting computerwetenschappen, enkele
+              startup MVP's, alsook een aantal studentenjobs in de software
+              ontwikkeling, heb ik een aantal projecten opgebouwd. Hieronder
+              vind je een overzicht van de projecten waar ik het meest trots op
+              ben.
             </p>
           </div>
 
           <div class="row" data-aos="fade-up">
             <div class="col-lg-12 d-flex justify-content-center">
               <ul id="portfolio-flters">
-                <li data-filter="*" class="filter-active">All</li>
-                <li data-filter=".filter-app">App</li>
-                <li data-filter=".filter-card">Card</li>
-                <li data-filter=".filter-web">Web</li>
+                <li data-filter="*" class="filter-active">Alles</li>
+                <li data-filter=".filter-web">Web & App development</li>
+                <li data-filter=".filter-software">Software engineering</li>
+                <li data-filter=".filter-machine-learning">Machine learning</li>
               </ul>
             </div>
           </div>
@@ -711,29 +712,31 @@
             data-aos="fade-up"
             data-aos-delay="100"
           >
-            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-1.jpg"
+                  src="assets/img/portfolio/ecommerce_nextjs_shop.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/portfolio-1.jpg"
+                    href="assets/img/portfolio/ecommerce_nextjs_shop.png"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
-                    title="App 1"
+                    title="Een e-commerce webshop gemaakt met Next.js"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a href="portfolio/ecommerce.html" title="Meer details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div
+              class="col-lg-4 col-md-6 portfolio-item filter-machine-learning"
+            >
               <div class="portfolio-wrap">
                 <img
                   src="assets/img/portfolio/portfolio-2.jpg"
@@ -755,7 +758,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
                 <img
                   src="assets/img/portfolio/portfolio-3.jpg"
@@ -777,7 +780,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-software">
               <div class="portfolio-wrap">
                 <img
                   src="assets/img/portfolio/portfolio-4.jpg"
@@ -799,7 +802,9 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div
+              class="col-lg-4 col-md-6 portfolio-item filter-machine-learning"
+            >
               <div class="portfolio-wrap">
                 <img
                   src="assets/img/portfolio/portfolio-5.jpg"
@@ -821,7 +826,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
                 <img
                   src="assets/img/portfolio/portfolio-6.jpg"
@@ -843,7 +848,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-software">
               <div class="portfolio-wrap">
                 <img
                   src="assets/img/portfolio/portfolio-7.jpg"
@@ -865,7 +870,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+            <div class="col-lg-4 col-md-6 portfolio-item filter-software">
               <div class="portfolio-wrap">
                 <img
                   src="assets/img/portfolio/portfolio-8.jpg"
@@ -887,7 +892,9 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+            <div
+              class="col-lg-4 col-md-6 portfolio-item filter-machine-learning"
+            >
               <div class="portfolio-wrap">
                 <img
                   src="assets/img/portfolio/portfolio-9.jpg"
@@ -917,12 +924,11 @@
       <section id="testimonials" class="testimonials section-bg">
         <div class="container">
           <div class="section-title">
-            <h2>Testimonials</h2>
+            <h2>Getuigenissen</h2>
             <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
+              Gedurende de jaren heb ik enkele getuigenissen mogen ontvangen van
+              vrienden, klanten & partners. Een aantal van hen zijn hieronder
+              terug te vinden.
             </p>
           </div>
 
@@ -1064,10 +1070,11 @@
           <div class="section-title">
             <h2>Contact</h2>
             <p>
-              Magnam dolores commodi suscipit. Necessitatibus eius consequatur
-              ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam
-              quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea.
-              Quia fugiat sit in iste officiis commodi quidem hic quas.
+              Heb je een website of webapplicatie nodig? Of heb je eerder nood
+              aan een IT-freelancer? Of gewoon een gezellige babbel met een
+              koffietje over startup ideeën?
+              <br />
+              Twijfel niet om contact met me op te nemen!
             </p>
           </div>
 
@@ -1076,24 +1083,31 @@
               <div class="info">
                 <div class="address">
                   <i class="bi bi-geo-alt"></i>
-                  <h4>Location:</h4>
-                  <p>A108 Adam Street, New York, NY 535022</p>
+                  <h4>Locatie:</h4>
+                  <p>
+                    Wilskerkestraat 70, 8432 Leffinge <br />Daarnaast ben ik ook
+                    regelmatig in Leuven te vinden
+                  </p>
                 </div>
 
                 <div class="email">
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
-                  <p>info@example.com</p>
+                  <p>
+                    <a href="mailto:jorritwillaert98@gmail.com"
+                      >jorritwillaert98@gmail.com</a
+                    >
+                  </p>
                 </div>
 
-                <div class="phone">
+                <!-- <div class="phone">
                   <i class="bi bi-phone"></i>
                   <h4>Call:</h4>
                   <p>+1 5589 55488 55s</p>
-                </div>
+                </div> -->
 
                 <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7141.047635883321!2d2.8685473907794026!3d51.17372501180725!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47dcaf8eec9938e1%3A0xd155cd6bd8800344!2sWilskerkestraat%2070%2C%208432%20Middelkerke!5e0!3m2!1sen!2sbe!4v1678903477289!5m2!1sen!2sbe"
                   frameborder="0"
                   style="border: 0; width: 100%; height: 290px"
                   allowfullscreen
@@ -1110,7 +1124,7 @@
               >
                 <div class="row">
                   <div class="form-group col-md-6">
-                    <label for="name">Your Name</label>
+                    <label for="name">Uw naam</label>
                     <input
                       type="text"
                       name="name"
@@ -1120,7 +1134,7 @@
                     />
                   </div>
                   <div class="form-group col-md-6">
-                    <label for="name">Your Email</label>
+                    <label for="name">Uw email</label>
                     <input
                       type="email"
                       class="form-control"
@@ -1131,7 +1145,7 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <label for="name">Subject</label>
+                  <label for="name">Onderwerp</label>
                   <input
                     type="text"
                     class="form-control"
@@ -1141,7 +1155,7 @@
                   />
                 </div>
                 <div class="form-group">
-                  <label for="name">Message</label>
+                  <label for="name">Bericht</label>
                   <textarea
                     class="form-control"
                     name="message"
@@ -1150,14 +1164,14 @@
                   ></textarea>
                 </div>
                 <div class="my-3">
-                  <div class="loading">Loading</div>
+                  <div class="loading">Aan het laden</div>
                   <div class="error-message"></div>
                   <div class="sent-message">
-                    Your message has been sent. Thank you!
+                    Uw bericht werd succesvol verzonden. Bedankt!
                   </div>
                 </div>
                 <div class="text-center">
-                  <button type="submit">Send Message</button>
+                  <button type="submit">Verzend bericht</button>
                 </div>
               </form>
             </div>
