Work more on portfolio

--- a/index.html
+++ b/index.html
@@ -734,68 +734,22 @@
               </div>
             </div>
 
-            <div
-              class="col-lg-4 col-md-6 portfolio-item filter-machine-learning"
-            >
-              <div class="portfolio-wrap">
-                <img
-                  src="assets/img/portfolio/portfolio-2.jpg"
-                  class="img-fluid"
-                  alt=""
-                />
-                <div class="portfolio-links">
-                  <a
-                    href="assets/img/portfolio/portfolio-2.jpg"
-                    data-gallery="portfolioGallery"
-                    class="portfolio-lightbox"
-                    title="Web 3"
-                    ><i class="bx bx-plus"></i
-                  ></a>
-                  <a href="portfolio-details.html" title="More Details"
-                    ><i class="bx bx-link"></i
-                  ></a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-              <div class="portfolio-wrap">
-                <img
-                  src="assets/img/portfolio/portfolio-3.jpg"
-                  class="img-fluid"
-                  alt=""
-                />
-                <div class="portfolio-links">
-                  <a
-                    href="assets/img/portfolio/portfolio-3.jpg"
-                    data-gallery="portfolioGallery"
-                    class="portfolio-lightbox"
-                    title="App 2"
-                    ><i class="bx bx-plus"></i
-                  ></a>
-                  <a href="portfolio-details.html" title="More Details"
-                    ><i class="bx bx-link"></i
-                  ></a>
-                </div>
-              </div>
-            </div>
-
             <div class="col-lg-4 col-md-6 portfolio-item filter-software">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-4.jpg"
+                  src="assets/img/portfolio/chess_engine.jpg"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/portfolio-4.jpg"
+                    href="assets/img/portfolio/chess_engine.jpg"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
-                    title="Card 2"
+                    title="Hoogperformante schaak engine in C++"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a href="portfolio/chess_engine.html" title="Meer details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -807,19 +761,45 @@
             >
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-5.jpg"
+                  src="assets/img/portfolio/rail_segmentation.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/portfolio-5.jpg"
+                    href="assets/img/portfolio/rail_segmentation.png"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
-                    title="Web 2"
+                    title="Een Machine Learning model die sporen kan segmenteren"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a
+                    href="portfolio/rail_segmentation.html"
+                    title="Meer details"
+                    ><i class="bx bx-link"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
+            <div
+              class="col-lg-4 col-md-6 portfolio-item filter-machine-learning"
+            >
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/deepproblog.jpg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-links">
+                  <a
+                    href="assets/img/portfolio/deepproblog.jpg"
+                    data-gallery="portfolioGallery"
+                    class="portfolio-lightbox"
+                    title="Visual Question Answering met behulp van DeepProbLog"
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                  <a href="portfolio/deepproblog.html" title="Meer details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -829,19 +809,19 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-6.jpg"
+                  src="assets/img/portfolio/esystant_making_assignment.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/portfolio-6.jpg"
+                    href="assets/img/portfolio/esystant_making_assignment.png"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
-                    title="App 3"
+                    title="Herschrijven van E-Systant (een online codeerplatform voor studenten computerwetenschappen) in Angular"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                  <a href="portfolio/esystant.html" title="Meer details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -851,41 +831,21 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-software">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-7.jpg"
+                  src="assets/img/portfolio/genetic_algorithms_convergence_graphs.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/portfolio-7.jpg"
+                    href="assets/img/portfolio/genetic_algorithms_convergence_graphs.png"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
-                    title="Card 1"
+                    title="Genetische algoritmes die met meta-heuristieken convergeren"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio-details.html" title="More Details"
-                    ><i class="bx bx-link"></i
-                  ></a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item filter-software">
-              <div class="portfolio-wrap">
-                <img
-                  src="assets/img/portfolio/portfolio-8.jpg"
-                  class="img-fluid"
-                  alt=""
-                />
-                <div class="portfolio-links">
                   <a
-                    href="assets/img/portfolio/portfolio-8.jpg"
-                    data-gallery="portfolioGallery"
-                    class="portfolio-lightbox"
-                    title="Card 3"
-                    ><i class="bx bx-plus"></i
-                  ></a>
-                  <a href="portfolio-details.html" title="More Details"
+                    href="portfolio/genetic-algorithms.html"
+                    title="Meer details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -893,6 +853,54 @@
             </div>
 
             <div
+              class="col-lg-4 col-md-6 portfolio-item filter-machine-learning"
+            >
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/visual_question_answering_1.png"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-links">
+                  <a
+                    href="assets/img/portfolio/visual_question_answering_1.png"
+                    data-gallery="portfolioGallery"
+                    class="portfolio-lightbox"
+                    title="Een Visual Question Answering model dat met behulp van PyTorch getrained is"
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                  <a
+                    href="portfolio/visual_question_answering.html"
+                    title="Meer details"
+                    ><i class="bx bx-link"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+              <div class="portfolio-wrap">
+                <img
+                  src="assets/img/portfolio/insta-clone.png"
+                  class="img-fluid"
+                  alt=""
+                />
+                <div class="portfolio-links">
+                  <a
+                    href="assets/img/portfolio/insta-clone.png"
+                    data-gallery="portfolioGallery"
+                    class="portfolio-lightbox"
+                    title="Een Instagram clone gemaakt met React en Firebase"
+                    ><i class="bx bx-plus"></i
+                  ></a>
+                  <a href="portfolio/insta-clone.html" title="Meer details"
+                    ><i class="bx bx-link"></i
+                  ></a>
+                </div>
+              </div>
+            </div>
+
+            <!-- <div
               class="col-lg-4 col-md-6 portfolio-item filter-machine-learning"
             >
               <div class="portfolio-wrap">
@@ -914,7 +922,7 @@
                   ></a>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
