--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="nl">
-  <head>
+  <base>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
@@ -40,6 +40,18 @@
 
     <!-- Template Main CSS File -->
     <link href="assets/css/style.css" rel="stylesheet" />
+
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.js"
+      integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      $(function () {
+        $("#heading_home").load("header_home.html");
+      });
+    </script>
+    </base>
   </head>
 
   <body>
@@ -47,83 +59,7 @@
     <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
 
     <!-- ======= Header ======= -->
-    <header id="header">
-      <div class="d-flex flex-column">
-        <div class="profile">
-          <img
-            src="assets/img/JorritWillaert.png"
-            alt=""
-            class="img-fluid rounded-circle"
-          />
-          <h1 class="text-light"><a href="index.html">Jorrit Willaert</a></h1>
-          <div class="social-links mt-3 text-center">
-            <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
-            <!-- <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a> -->
-            <!-- <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
-            <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
-            <a
-              href="https://www.linkedin.com/in/jorrit-willaert-166a64198/"
-              target="_blank"
-              class="linkedin"
-              ><i class="bx bxl-linkedin"></i
-            ></a>
-            <a
-              href="https://medium.com/@jorritwillaert98"
-              target="_blank"
-              class="medium"
-              ><i class="bx bxl-medium"></i
-            ></a>
-            <a
-              href="https://github.com/JorritWillaert"
-              target="_blank"
-              class="github"
-              ><i class="bx bxl-github"></i
-            ></a>
-            <a href="mailto:jorritwilllaert98@gmail.com" class="mail"
-              ><i class="bi bi-envelope"></i
-            ></a>
-          </div>
-        </div>
-
-        <nav id="navbar" class="nav-menu navbar">
-          <ul>
-            <li>
-              <a href="#hero" class="nav-link scrollto active"
-                ><i class="bx bx-home"></i> <span>Home</span></a
-              >
-            </li>
-            <li>
-              <a href="#services" class="nav-link scrollto"
-                ><i class="bx bx-server"></i> <span>Wat ik doe</span></a
-              >
-            </li>
-            <li>
-              <a href="#about" class="nav-link scrollto"
-                ><i class="bx bx-user"></i> <span>Over mij</span></a
-              >
-            </li>
-            <li>
-              <a href="#skills" class="nav-link scrollto"
-                ><i class="bx bx-file-blank"></i> <span>Vaardigheden</span></a
-              >
-            </li>
-            <li>
-              <a href="#portfolio" class="nav-link scrollto"
-                ><i class="bx bx-book-content"></i> <span>Portfolio</span></a
-              >
-            </li>
-            <li>
-              <a href="#contact" class="nav-link scrollto"
-                ><i class="bx bx-envelope"></i> <span>Contact</span></a
-              >
-            </li>
-          </ul>
-        </nav>
-        <!-- .nav-menu -->
-      </div>
-    </header>
-    <!-- End Header -->
-
+    <div id="heading_home"></div>
     <!-- ======= Hero Section ======= -->
     <section
       id="hero"
@@ -866,7 +802,7 @@
                     href="assets/img/portfolio/visual_question_answering_1.png"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
-                    title="Een Visual Question Answering model dat met behulp van PyTorch getrained is"
+                    title="Een Visual Question Answering model dat met behulp van PyTorch is getraind"
                     ><i class="bx bx-plus"></i
                   ></a>
                   <a
