--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
   <div class="d-flex flex-column">
     <div class="profile">
       <img
-        src="../assets/img/JorritWillaert.png"
+        src="../../assets/img/JorritWillaert.png"
         alt=""
         class="img-fluid rounded-circle"
       />
@@ -39,32 +39,32 @@
     <nav id="navbar" class="nav-menu navbar">
       <ul>
         <li>
-          <a href="../#hero" class="nav-link scrollto active"
+          <a href="../../#hero" class="nav-link scrollto active"
             ><i class="bx bx-home"></i> <span>Home</span></a
           >
         </li>
         <li>
-          <a href="../#services" class="nav-link scrollto"
+          <a href="../../#services" class="nav-link scrollto"
             ><i class="bx bx-server"></i> <span>Wat ik doe</span></a
           >
         </li>
         <li>
-          <a href="../#about" class="nav-link scrollto"
+          <a href="../../#about" class="nav-link scrollto"
             ><i class="bx bx-user"></i> <span>Over mij</span></a
           >
         </li>
         <li>
-          <a href="../#skills" class="nav-link scrollto"
+          <a href="../../#skills" class="nav-link scrollto"
             ><i class="bx bx-file-blank"></i> <span>Vaardigheden</span></a
           >
         </li>
         <li>
-          <a href="../#portfolio" class="nav-link scrollto"
+          <a href="../../#portfolio" class="nav-link scrollto"
             ><i class="bx bx-book-content"></i> <span>Portfolio</span></a
           >
         </li>
         <li>
-          <a href="../#contact" class="nav-link scrollto"
+          <a href="../../#contact" class="nav-link scrollto"
             ><i class="bx bx-envelope"></i> <span>Contact</span></a
           >
         </li>
