--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="nl">
-  <base>
+  <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
@@ -51,7 +51,6 @@
         $("#heading_home").load("header_home.html");
       });
     </script>
-    </base>
   </head>
 
   <body>
@@ -663,7 +662,7 @@
                     title="Een e-commerce webshop gemaakt met Next.js"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio/ecommerce.html" title="Meer details"
+                  <a href="portfolio/ecommerce/index.html" title="Meer details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -685,7 +684,9 @@
                     title="Hoogperformante schaak engine in C++"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio/chess_engine.html" title="Meer details"
+                  <a
+                    href="portfolio/chess_engine/index.html"
+                    title="Meer details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -710,7 +711,7 @@
                     ><i class="bx bx-plus"></i
                   ></a>
                   <a
-                    href="portfolio/rail_segmentation.html"
+                    href="portfolio/rail_segmentation/index.html"
                     title="Meer details"
                     ><i class="bx bx-link"></i
                   ></a>
@@ -735,7 +736,9 @@
                     title="Visual Question Answering met behulp van DeepProbLog"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio/deepproblog.html" title="Meer details"
+                  <a
+                    href="portfolio/deepproblog/index.html"
+                    title="Meer details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -757,7 +760,7 @@
                     title="Herschrijven van E-Systant (een online codeerplatform voor studenten computerwetenschappen) in Angular"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio/esystant.html" title="Meer details"
+                  <a href="portfolio/esystant/index.html" title="Meer details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
@@ -780,7 +783,7 @@
                     ><i class="bx bx-plus"></i
                   ></a>
                   <a
-                    href="portfolio/genetic-algorithms.html"
+                    href="portfolio/genetic-algorithms/index.html"
                     title="Meer details"
                     ><i class="bx bx-link"></i
                   ></a>
@@ -806,7 +809,7 @@
                     ><i class="bx bx-plus"></i
                   ></a>
                   <a
-                    href="portfolio/visual_question_answering.html"
+                    href="portfolio/visual_question_answering/index.html"
                     title="Meer details"
                     ><i class="bx bx-link"></i
                   ></a>
@@ -829,7 +832,9 @@
                     title="Een Instagram clone gemaakt met React en Firebase"
                     ><i class="bx bx-plus"></i
                   ></a>
-                  <a href="portfolio/insta-clone.html" title="Meer details"
+                  <a
+                    href="portfolio/insta-clone/index.html"
+                    title="Meer details"
                     ><i class="bx bx-link"></i
                   ></a>
                 </div>
