--- a/portfolio/ecommerce/index.html
+++ b/portfolio/ecommerce/index.html
@@ -9,46 +9,42 @@
     <meta content="" name="keywords" />
 
     <!-- Favicons -->
-    <link href="../assets/img/favicon.png" rel="icon" />
-    <link href="../assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
+    <link href="../../assets/img/favicon.png" rel="icon" />
+    <link href="../../assets/img/apple-touch-icon.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
-    <link href="../assets/fonts/font-portfolio.css" rel="stylesheet" />
+    <link href="../../assets/fonts/font-portfolio.css" rel="stylesheet" />
 
     <!-- Vendor CSS Files -->
-    <link href="../assets/vendor/aos/aos.css" rel="stylesheet" />
+    <link href="../../assets/vendor/aos/aos.css" rel="stylesheet" />
     <link
-      href="../assets/vendor/bootstrap/css/bootstrap.min.css"
+      href="../../assets/vendor/bootstrap/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <link
-      href="../assets/vendor/bootstrap-icons/bootstrap-icons.css"
+      href="../../assets/vendor/bootstrap-icons/bootstrap-icons.css"
       rel="stylesheet"
     />
     <link
-      href="../assets/vendor/boxicons/css/boxicons.min.css"
+      href="../../assets/vendor/boxicons/css/boxicons.min.css"
       rel="stylesheet"
     />
     <link
-      href="../assets/vendor/glightbox/css/glightbox.min.css"
+      href="../../assets/vendor/glightbox/css/glightbox.min.css"
       rel="stylesheet"
     />
     <link
-      href="../assets/vendor/swiper/swiper-bundle.min.css"
+      href="../../assets/vendor/swiper/swiper-bundle.min.css"
       rel="stylesheet"
     />
 
     <!-- Template Main CSS File -->
-    <link href="../assets/css/style.css" rel="stylesheet" />
+    <link href="../../assets/css/style.css" rel="stylesheet" />
 
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.js"
-      integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-      crossorigin="anonymous"
-    ></script>
+    <script src="../../assets/js/jquery.js"></script>
     <script>
       $(function () {
-        $("#heading").load("../header.html");
+        $("#heading").load("../../header.html");
       });
     </script>
   </head>
@@ -66,7 +62,7 @@
           <div class="d-flex justify-content-between align-items-center">
             <h2>Portfolio details</h2>
             <ol>
-              <li><a href="../index.html">Home</a></li>
+              <li><a href="../../index.html">Home</a></li>
               <li>Portfolio details</li>
             </ol>
           </div>
@@ -83,21 +79,21 @@
                 <div class="swiper-wrapper align-items-center">
                   <div class="swiper-slide">
                     <img
-                      src="../assets/img/portfolio/ecommerce_nextjs.png"
+                      src="../../assets/img/portfolio/ecommerce_nextjs.png"
                       alt=""
                     />
                   </div>
 
                   <div class="swiper-slide">
                     <img
-                      src="../assets/img/portfolio/ecommerce_nextjs_shop.png"
+                      src="../../assets/img/portfolio/ecommerce_nextjs_shop.png"
                       alt=""
                     />
                   </div>
 
                   <!-- <div class="swiper-slide">
                     <img
-                      src="../assets/img/portfolio/portfolio-details-3.jpg"
+                      src="../../assets/img/portfolio/portfolio-details-3.jpg"
                       alt=""
                     />
                   </div> -->
@@ -147,17 +143,17 @@
     ></a>
 
     <!-- Vendor JS Files -->
-    <script src="../assets/vendor/purecounter/purecounter_vanilla.js"></script>
-    <script src="../assets/vendor/aos/aos.js"></script>
-    <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="../assets/vendor/glightbox/js/glightbox.min.js"></script>
-    <script src="../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-    <script src="../assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="../assets/vendor/typed.js/typed.min.js"></script>
-    <script src="../assets/vendor/waypoints/noframework.waypoints.js"></script>
-    <script src="../assets/vendor/php-email-form/validate.js"></script>
+    <script src="../../assets/vendor/purecounter/purecounter_vanilla.js"></script>
+    <script src="../../assets/vendor/aos/aos.js"></script>
+    <script src="../../assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="../../assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="../../assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+    <script src="../../assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script src="../../assets/vendor/typed.js/typed.min.js"></script>
+    <script src="../../assets/vendor/waypoints/noframework.waypoints.js"></script>
+    <script src="../../assets/vendor/php-email-form/validate.js"></script>
 
     <!-- Template Main JS File -->
-    <script src="../assets/js/main.js"></script>
+    <script src="../../assets/js/main.js"></script>
   </body>
 </html>
