Add project details of the chess engine

--- a/portfolio/ecommerce/index.html
+++ b/portfolio/ecommerce/index.html
@@ -113,10 +113,13 @@
                     Firebase, Sanity, TailwindCSS, Stripe
                   </li>
                   <li><strong>Datum</strong>: 15 November 2022</li>
-                  <!-- <li>
-                    <strong>Project URL</strong>:
-                    <a href="#">www.example.com</a>
-                  </li> -->
+                  <li>
+                    <strong>Source code</strong>:
+                    <a
+                      href="https://github.com/JorritWillaert/Web-Development-Projects/tree/master/nextjs-react-ecommerce/ecommerce"
+                      >Github link</a
+                    >
+                  </li>
                 </ul>
               </div>
               <div class="portfolio-description">
