--- a/index.html
+++ b/index.html
@@ -891,19 +891,18 @@
                 <div class="testimonial-item" data-aos="fade-up">
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Proin iaculis purus consequat sem cure digni ssim donec
-                    porttitora entum suscipit rhoncus. Accusantium quam,
-                    ultricies eget id, aliquam eget nibh et. Maecen aliquam,
-                    risus at semper.
+                    Jorrit is een bekwame toffe man die zich hard inzet op
+                    verschillende vlakken. Hij staat ook steeds open voor een
+                    babbel, zowel als vriend als op professioneel niveau.
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                   <img
-                    src="assets/img/testimonials/testimonials-1.jpg"
+                    src="assets/img/testimonials/YarnoViaene.jpg"
                     class="testimonial-img"
                     alt=""
                   />
-                  <h3>Saul Goodman</h3>
-                  <h4>Ceo &amp; Founder</h4>
+                  <h3>Yarno Viaene</h3>
+                  <h4>Industrieel ingenieur &amp; goede vriend</h4>
                 </div>
               </div>
               <!-- End testimonial item -->
