Add DeepProbLog to portfolio

--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
                     href="assets/img/portfolio/deepproblog.jpg"
                     data-gallery="portfolioGallery"
                     class="portfolio-lightbox"
-                    title="Visual Question Answering met behulp van DeepProbLog"
+                    title="Neuro Symbolic AI - Visual Question Answering met behulp van DeepProbLog"
                     ><i class="bx bx-plus"></i
                   ></a>
                   <a
