--- a/portfolio/deepproblog/index.html
+++ b/portfolio/deepproblog/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
-    <title>Jorrit Willaert - Schaak engine</title>
+    <title>Jorrit Willaert - Neuro Symbolic AI</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
@@ -79,24 +79,24 @@
                 <div class="swiper-wrapper align-items-center">
                   <div class="swiper-slide">
                     <img
-                      src="../../assets/img/portfolio/chess_engine.jpg"
+                      src="../../assets/img/portfolio/deepproblog.jpg"
                       alt=""
                     />
                   </div>
 
                   <div class="swiper-slide">
                     <img
-                      src="../../assets/img/portfolio/chess_code.png"
+                      src="../../assets/img/portfolio/deepproblog_confusion_matrix.png"
                       alt=""
                     />
                   </div>
 
-                  <!-- <div class="swiper-slide">
+                  <div class="swiper-slide">
                     <img
-                      src="../../assets/img/portfolio/portfolio-details-3.jpg"
+                      src="../../assets/img/portfolio/deepproblog_loss_curve.png"
                       alt=""
                     />
-                  </div> -->
+                  </div>
                 </div>
                 <div class="swiper-pagination"></div>
               </div>
@@ -104,17 +104,23 @@
 
             <div class="col-lg-4">
               <div class="portfolio-info">
-                <h3>Hoogperformante schaak engine in C++</h3>
+                <h3>
+                  Neuro Symbolic AI - Visual Question Answering met behulp van
+                  DeepProbLog
+                </h3>
                 <ul>
-                  <li><strong>Categorie</strong>: Software engineering</li>
+                  <li><strong>Categorie</strong>: Machine Learning</li>
                   <!-- <li><strong>Client</strong>: ASU Company</li> -->
-                  <li><strong>Talen & Frameworks:</strong> C++</li>
-                  <li><strong>Datum</strong>: 31 December 2022</li>
+                  <li>
+                    <strong>Talen & Frameworks:</strong> Python, PyTorch,
+                    DeepProbLog
+                  </li>
+                  <li><strong>Datum</strong>: 23 April 2022</li>
                   <li>
                     <strong>Source code</strong>:
                     <a
                       target="_blank"
-                      href="https://github.com/JorritWillaert/Chess-Engine-CPlusPlus-CPL"
+                      href="https://github.com/JorritWillaert/Capita-Selecta-Neuro-Symbolic-AI"
                       >Github link</a
                     >
                   </li>
@@ -123,15 +129,22 @@
               <div class="portfolio-description">
                 <!-- <h2>Maken van een webshop</h2> -->
                 <p>
-                  Het project voor het vak 'Comparative Programming Languages'
-                  was het maken van een schaak engine in C++. Voor de
-                  voorstelling van het board heb ik gebruik gemaakt van
-                  zogenaamde bitboards, wat het er achteraf gezien niet bepaald
-                  gemakkelijker op gemaakt heeft, maar op die manier kon wel een
-                  hoge performantie bekomen worden! Naast het correct
-                  implementeren van alle schaakregels heb ik dan het Minimax
-                  algoritme gebruikt om de beste zet te berekenen. Mijn schaak
-                  engine behaalde uiteindelijk ook een ELO-rating van 2103!
+                  Voor het vak 'Capita Selecta AI' heb ik gekozen om me verder
+                  te verdiepen in Neuro Symbolic AI. Specifiek heb ik hiervoor
+                  DeepProbLog gebruikt, waarbij probabilistisch logisch denken
+                  gecombineerd wordt met neurale netwerken. In dit project heb
+                  ik ook veel met PyTorch gewerkt voor het opzetten van de
+                  neurale netwerken en de data loaders. Het doel van dit project
+                  was om een Visual Question Answering model te maken, waarbij
+                  het vragen moet kunnen beantwoorden gebaseerd op een
+                  afbeelding. Ik heb ook een paper geschreven over dit project,
+                  die je
+                  <a
+                    href="https://github.com/JorritWillaert/Capita-Selecta-Neuro-Symbolic-AI/blob/master/paper/paper.pdf"
+                    target="_blank"
+                    >hier</a
+                  >
+                  kan vinden.
                 </p>
               </div>
             </div>
