--- a/portfolio/ecommerce/index.html
+++ b/portfolio/ecommerce/index.html
@@ -116,6 +116,7 @@
                   <li>
                     <strong>Source code</strong>:
                     <a
+                      target="_blank"
                       href="https://github.com/JorritWillaert/Web-Development-Projects/tree/master/nextjs-react-ecommerce/ecommerce"
                       >Github link</a
                     >
