--- a/portfolio/rail_segmentation/index.html
+++ b/portfolio/rail_segmentation/index.html
@@ -113,6 +113,7 @@
                   <!-- <li>
                     <strong>Source code</strong>:
                     <a
+                      target="_blank"
                       href="https://github.com/JorritWillaert/Web-Development-Projects/tree/master/nextjs-react-ecommerce/ecommerce"
                       >Github link</a
                     >
