Add testimonial of Kanksha

--- a/index.html
+++ b/index.html
@@ -915,19 +915,24 @@
                 >
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Export tempor illum tamen malis malis eram quae irure esse
-                    labore quem cillum quid cillum eram malis quorum velit fore
-                    eram velit sunt aliqua noster fugiat irure amet legam anim
-                    culpa.
+                    When I think of Jorrit, the first word that comes to my mind
+                    is ambitious. Always on the lookout for problems to solve,
+                    he is not afraid to try out his ideas, which is honestly
+                    very inspiring to see. He's proactive, a go-getter and a
+                    perpetually curious individual. Helpful, kind and genuine -
+                    I'm happy to call him a friend :)
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                   <img
-                    src="assets/img/testimonials/testimonials-2.jpg"
+                    src="assets/img/testimonials/KankshaPandey.jpeg"
                     class="testimonial-img"
                     alt=""
                   />
-                  <h3>Sara Wilsson</h3>
-                  <h4>Designer</h4>
+                  <h3>Kanksha Pandey</h3>
+                  <h4>
+                    Specialiste in Artificial Intelligence & inspirerende
+                    vriendin
+                  </h4>
                 </div>
               </div>
               <!-- End testimonial item -->
