--- a/index.html
+++ b/index.html
@@ -875,9 +875,9 @@
           <div class="section-title">
             <h2>Getuigenissen</h2>
             <p>
-              Gedurende de jaren heb ik enkele getuigenissen mogen ontvangen van
-              vrienden, klanten & partners. Een aantal van hen zijn hieronder
-              terug te vinden.
+              Gedurende de jaren heb ik enkele mooi getuigenissen mogen
+              ontvangen van vrienden, klanten & partners. Een aantal van hen
+              zijn hieronder terug te vinden.
             </p>
           </div>
 
@@ -918,9 +918,12 @@
                     When I think of Jorrit, the first word that comes to my mind
                     is ambitious. Always on the lookout for problems to solve,
                     he is not afraid to try out his ideas, which is honestly
-                    very inspiring to see. He's proactive, a go-getter and a
-                    perpetually curious individual. Helpful, kind and genuine -
-                    I'm happy to call him a friend :)
+                    very inspiring to see. With no less than five projects going
+                    at any time, I sometimes wonder if he secretly has more than
+                    24 hours in a day. He's proactive, a go-getter and a
+                    perpetually curious individual. Helpful, kind, genuine and a
+                    very patient Dutch teacher - I'm happy to call him a friend
+                    :)
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                   <img
