--- a/header.html
+++ b/header.html
@@ -2,7 +2,7 @@
   <div class="d-flex flex-column">
     <div class="profile">
       <img
-        src="../../assets/img/JorritWillaert.png"
+        src="../../assets/img/JorritWillaertProfile.jpeg"
         alt=""
         class="img-fluid rounded-circle"
       />
