--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           <div class="row">
             <div class="col-lg-4" data-aos="fade-right">
               <img
-                src="assets/img/JorritWillaert.png"
+                src="assets/img/JorritWillaertProfile.jpeg"
                 class="img-fluid"
                 alt=""
               />
