Try to fix the form

--- a/index.html
+++ b/index.html
@@ -1073,10 +1073,9 @@
 
             <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
               <form
-                action="forms/contact.php"
                 method="post"
-                role="form"
                 class="php-email-form"
+                data-gf-url="https://docs.google.com/forms/d/e/1FAIpQLSdqanT03qm-mKEA46UdvFfpTUcJu55SOSUgeG5-VPiEFmjxiA/formResponse?&entry.394154=name&entry.845304443=email&entry.1762029086=subject&entry.1813234975=message&submit=SUBMIT"
               >
                 <div class="row">
                   <div class="form-group col-md-6">
@@ -1119,13 +1118,13 @@
                     required
                   ></textarea>
                 </div>
-                <div class="my-3">
+                <!-- <div class="my-3">
                   <div class="loading">Aan het laden</div>
                   <div class="error-message"></div>
                   <div class="sent-message">
                     Uw bericht werd succesvol verzonden. Bedankt!
                   </div>
-                </div>
+                </div> -->
                 <div class="text-center">
                   <button type="submit">Verzend bericht</button>
                 </div>
