--- a/header.html
+++ b/header.html
@@ -30,7 +30,7 @@
           class="github"
           ><i class="bx bxl-github"></i
         ></a>
-        <a href="mailto:jorritwilllaert98@gmail.com" class="mail"
+        <a href="mailto:jorrit@jorritwillaert.com" class="mail"
           ><i class="bi bi-envelope"></i
         ></a>
       </div>
