--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
                       <i class="bi bi-chevron-right"></i>
                       <strong>Email:</strong>
                       <span
-                        ><a href="mailto:jorritwillaert98@gmail.com"
-                          >jorritwillaert98@gmail.com</a
+                        ><a href="mailto:jorrit@jorritwillaert.com"
+                          >jorrit@jorritwillaert.com</a
                         ></span
                       >
                     </li>
@@ -1050,8 +1050,8 @@
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
                   <p>
-                    <a href="mailto:jorritwillaert98@gmail.com"
-                      >jorritwillaert98@gmail.com</a
+                    <a href="mailto:jorrit@jorritwillaert.com"
+                      >jorrit@jorritwillaert.com</a
                     >
                   </p>
                 </div>
